# friction_compensation

./: .README.md.swp  .gitignore  Environment_setups.readme  README.md  log  simple_friction_model.py  train.sh  win2unix_data_transmit.py  训练交接说明.md
data/: .realtime-20190827-165608.rec-data.prb-log.swp  test_wangyongchao1.lua  test_wangyongchao1.txt  test_wangyongchao2.lua  test_wangyongchao2.txt
ikpy/: README.md  loop_fk.py
models/: NN_weights_all_1  NN_weights_all_1_finetune  NN_weights_all_2  NN_weights_all_2_finetune  NN_weights_all_3  NN_weights_all_3_finetune  NN_weights_all_4  NN_weights_all_4_finetune  NN_weights_all_5  NN_weights_all_5_finetune  NN_weights_all_6  NN_weights_all_C.pt  NN_weights_all_C_1.pt  NN_weights_all_C_2.pt  NN_weights_all_C_3.pt  NN_weights_all_C_4.pt  NN_weights_all_C_5.pt  NN_weights_all_C_6.pt  NN_weights_best_all_1  NN_weights_best_all_1_finetune  NN_weights_best_all_2  NN_weights_best_all_2_finetune  NN_weights_best_all_3  NN_weights_best_all_3_finetune  NN_weights_best_all_4  NN_weights_best_all_4_finetune  NN_weights_best_all_5  NN_weights_best_all_5_finetune  NN_weights_best_all_6  NN_weights_best_all_6_finetune
models_save/: NN_weights_acc  NN_weights_all_C.pt  NN_weights_all_C_1.pt  NN_weights_all_C_2.pt  NN_weights_all_C_3.pt  NN_weights_all_C_4.pt  NN_weights_all_C_5.pt  NN_weights_all_C_6.pt  NN_weights_best_acc  NN_weights_best_all  NN_weights_best_all_1  NN_weights_best_all_1_finetune  NN_weights_best_all_2  NN_weights_best_all_2_finetune  NN_weights_best_all_3  NN_weights_best_all_3_finetune  NN_weights_best_all_4  NN_weights_best_all_4_finetune  NN_weights_best_all_5  NN_weights_best_all_6  NN_weights_best_uniform  NN_weights_uniform  linear_weights_acc  linear_weights_uniform  nonlinear_weights_acc  nonlinear_weights_uniform
output/: NN_compensation.txt  linear_compensation.txt  nonlinear_compensation.txt
src/: .NN_deploy.py.swp  .classical_deploy.py.swp  .data_stuff.py.swp  .sav_smooth.py.swp  .simple_friction_model.py.swo  .simple_friction_model.py.swp  NN_compensation.txt  NN_compose.py  NN_deploy.py  NN_model.py  NN_model_attetion.py  NN_model_old.py  NN_test.py  NN_train.py  Python_fake_set_to_so.py  all_axis.sh  all_axis_compose.sh  all_axis_deploy.sh  all_axis_finetune.sh  all_axis_test.sh  all_axis_train.sh  classical_compensation.txt  classical_deploy.py  classical_model.py  classical_train.py  data_stuff.py  evaluate.py  friction_train.py  input_analyzer.py  models  my_analyzer.py  plot_utils.py  sav_smooth.py  simple_friction_model.py  threads_start_comensation.py  try_setup_for_so.py  win2unix_data_transmit.py
src/C_project/: CMakeLists.txt  C_load_and_run_API.cpp  C_load_and_run_speed_test.cpp  README_pytorch_to_C_production.sh
src/C_project_arm/: CMakeLists.txt  threads_hello.cpp
src/C_project_linux/: CMakeLists.txt  C_load_and_run_API.cpp  README_pytorch_to_C_production.sh  main  run_all_cpu.sh  run_all_gpu.sh  statistics  threads_hello.cpp
src/C_project_linux/models/: NN_weights_acc_C.pt  NN_weights_uniform_C.pt
src/C_project_linux/old_cpps/: C_load_and_run_speed_test.cpp  get_data.cpp  get_model.cpp  predict.cpp
src/tmp_del/C_project_arm/: CMakeLists.txt  README_pytorch_to_C_production.sh
src/tmp_del/C_project_arm/old_cpps/: C_load_and_run_API.cpp
statistics/: X_mean_1  X_mean_2  X_mean_3  (+27 more)
(+1688 files in other folders)
